--- a/calculator/src/sass/main.scss
+++ b/calculator/src/sass/main.scss
@@ -9,9 +9,13 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-color: #1a1a1a;
+    color: rgba(255, 255, 255, 0.87);
 }
 
 .calculator {
+    background-color: #262626;
+    padding: 20px 5px;
     &__row {
         display: flex;
     }
@@ -19,20 +23,29 @@ body {
         width: 100%;
         height: 20px;
         text-align: right;
+        padding: 0 5px;
     }
     &__result {
         width: 100%;
         height: 40px;
         text-align: right;
-        padding: 5px;
+        line-height: 40px;
+        padding: 0 5px;
+        background-color: #404040;
+        margin: 2px;
+        font-size: 20px;
+        font-weight: 700;
     }
     &__button {
         width: 100px;
         height: 30px;
         text-align: center;
         line-height: 30px;
+        margin: 2px;
+        background-color: #333;
         &:hover {
             cursor: pointer;
+            background-color: #4d4d4d;
         }
     }
 }
